syntax = "proto3";
package headscale.v1;
option  go_package = "github.com/juanfont/headscale/gen/go/v1";

import "google/protobuf/timestamp.proto";

message User {
    string                    id         = 1;
    string                    name       = 2;
    google.protobuf.Timestamp created_at = 3;
}

message GetUserRequest {
    string name = 1;
}

message GetUserResponse {
    User user = 1;
}

message CreateUserRequest {
    string name = 1;
}

message CreateUserResponse {
    User user = 1;
}

message RenameUserRequest {
    string old_name = 1;
    string new_name = 2;
}

message RenameUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    string name = 1;
}

message DeleteUserResponse {
}

message ListUsersRequest {
}

message ListUsersResponse {
    repeated User users = 1;
}
